Tackle #9 again by clearing up log messages to avoid storing them in RAM forever because Testerra is using a list underneath.